--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 # my main html file 
 
-here goes my code 
+<html>
+  <head>
+    
+  </head>
+
+  <body>
+    <div>
+      Hello,world ...
+    </div>
+  </body>
+</html>
